# pridexyz

./: LICENSE.md  main.py  modrinth.py  pyproject.toml  requirements.txt
_working_files/: h_g_bg.aseprite  wfhp.aseprite
_working_files/test/: api_tests.py  test.py
pridexyz/: __init__.py  builder.py  color.py  logger.py  markdown.py  pack.py
pridexyz/common/: image_processing.py
pridexyz/hearts/: build.py
pridexyz/modrinth/: api.py  types.py
pridexyz/system/: __init__.py  config.py  main.py
pridexyz/system/tasks/: build.py  clean.py  modrinth.py
pridexyz/tooltip/: build.py  image_processing.py
src/: colors.json  meta.json
src/hearts/: modrinth.md  styles.json
src/tooltip/: modrinth.md  styles.json
